# steeleagle

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .typos.toml  Dockerfile  README.md  entrypoint.sh  main.py  mkdocs.yml  pyproject.toml  ruff.toml  sim_yml_gen.py
backend/: README.md  live.html  pyproject.toml
backend/server/: docker-compose.yml  entrypoint.sh  prometheus.yml  pyproject.toml  setup_wizard.py  swarm_controller.py  template.env  watermark.png.license
backend/server/elk/: filebeat.yml
backend/server/engines/: Dockerfile.obj_avoid  build_engines.sh  requirements.obj_avoid.txt
backend/server/redis/: redis.conf  redis.conf.template
backend/server/swarm_controller/: Dockerfile  pyproject.toml  requirements.txt  swarm_controller.py  test  test_swarm_controller_client.py
backend/server/templates/: redis.conf.template  secrets.toml.template  template.env
backend/server/test/: streaming_test_socket.py
gcs/: pyproject.toml
gcs/cli/: cli.py  launch.py  local_cli.py  main.py  map.py  pyproject.toml  view.py
gcs/dearpygui/: commander.py  template.yaml
gcs/eagleeye/: README.md  index.html  main.py  pyproject.toml
gcs/eagleeye/src/: App.jsx  Drawer.css  DroneCard.css  DroneCard.jsx  Mapbox.jsx  VehicleGroup.css  VehicleGroup.jsx
gcs/hawkeye/: index.html  package-lock.json  package.json
gcs/hawkeye/src/: App.css  App.jsx  CameraFeedCard.css  CameraFeedCard.jsx  Drawer.css  Drawer.jsx  DroneCard.jsx  GameControls.jsx  Mapbox.jsx  VehicleGroup.css  VehicleGroup.jsx
gcs/react/backend/: README.md  config.toml  config.toml.template  pyproject.toml
gcs/react/prime/: README.md  index.html  package-lock.json  package.json
gcs/streamlit/: overview.py  pyproject.toml  requirements.txt  streamlit_keypressed-0.1.5-py3-none-any.whl  util.py
gcs/streamlit/.streamlit/: config.toml  secrets.toml.template
gcs/streamlit/pages/: control.py  detections.py  monitoring.py  plan.py
gcs/vscode-client/: extension.js  package-lock.json  package.json
gcs/vscode-client/syntaxes/: dsl.tmLanguage.json
msn/: pyproject.toml
msn/src/steeleagle_msn/: __init__.py  main.py  mission_service.py
msn/test/: test_mission_client.py
sdk/: hatch_build.py  launch.sh  main_test.py  pyproject.toml  requirements.txt
sdk-revision/: mission.json  pyproject.toml
sdk-revision/src/steeleagle_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sdk-revision/test/: main_test.py  test_partition.py
sdk/api/: base.py  compute.py  documentation.py  drone.py  generate_api.py  helper.py  mission_store.py  native.py  state_store.py  utils.py  vehicle.py
sdk/api/actions/: helper.py  native.py  primitives.py  procedures.py  tactics.py
sdk/api/datatypes/: README.md  _base.py  common.py  compute.py  result.py  telemetry.py  waypoint.py
sdk/api/events/: compositions.py  primitives.py  singulars.py
sdk/api/messages/: common.py  computation.py  control.py  response.py  telemetry.py
sdk/api/templates/: action.py  type.py
sdk/dsl/: __init__.py
sdk/dsl/compiler/: ir.py  loader.py  registry.py  resolver.py  transformer.py  validator.py
sdk/dsl/grammar/: dronedsl.lark
sdk/dsl/partitioner/: corridor.py  edge.py  geopoints.py  partition.py  survey.py  utils.py  visualize.py
sdk/dsl/runtime/: __init__.py  fsm.py  runner_example.py
sdk/dsl/types/: utils.py
sdk/generate/: generate.sh  generate_api.py  test.sh  uvx_generate.sh
sdk/generate/templates/: action.py
sdk/protocol/: README.md  common.proto
sdk/protocol/messages/: compute_payload.proto  result.proto
sdk/protocol/services/: compute_service.proto  control_service.proto  remote_service.proto
sdk/protocol/testing/: __init__.py
sdk/src/steeleagle_sdk/: __init__.py
sdk/src/steeleagle_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk/test/: launch.sh  main_test.py  map.html  test_partition.py
sdk/tests/runtime_test/: command_service.py  msn_service.py
sdk/tools/language_server/: main.py  registry_completions.py
vehicle/: .internal.toml  .internal.yaml  .laws.toml  .laws.yaml  .states.yaml  Dockerfile  clear_logs.sh  cnc_protocol  common.py  config.template.toml  config.template.yaml  config.yaml.template  config.yml  conftest.py  docker-compose.yaml  env.sh  launch.py  launch.sh  launch_cmd_svc.sh  launch_driver.sh  pyproject.toml  requirements.txt  template.env
vehicle/compute/: ComputeItf.py  VOXLCompute.py  gabriel_compute.py
vehicle/configs/kestrel/: config.yaml
vehicle/core/: laws.py  main.py  remote_control_handler.py  serve.py  stream_handler.py
vehicle/core/handlers/: command_handler.py  remote_control_handler.py  stream_handler.py
vehicle/core/laws/: authority.py  interceptor.py
vehicle/core/services/: compute_service.py  generate_proxy.py  proxy_helper.py  report_service.py
vehicle/core/test/: conftest.py  helpers.py  requirements.txt  run.sh
vehicle/datasinks/: ComputeItf.py  GabrielCompute.py  VOXLCompute.py  gabriel_compute.py
vehicle/drivers/: driver.py
vehicle/drivers/multicopter/: driver.py  multicopter_interface.py
vehicle/hub/: CommandService.py  DataService.py  DataStore.py  Dockerfile  Service.py  __main__.py  command_service.py  common.py  control_service.py  data_service.py  data_store.py  service.py
vehicle/kernel/: config.yaml  main.py
vehicle/launch/: entrypoint.sh  launch_cmd_svc.sh  launch_data_svc.sh  launch_driver.sh  launch_hub.sh  launch_mission.sh
vehicle/logger/: flight_log_service.py  flight_logger.py  main.py
vehicle/mission/: interface  main.py  mission_service.py  requirements.txt  stream_handler.py  test_mission_client.py
vehicle/test/: .internal_test.yaml  config.toml  config.yaml  config_test.yaml  conftest.py  cprofile_reader.py  dummy_kernel_cmd.py  grpc_test.py  helpers.py  kernel.sh  message_sequencer.py  run.sh  serve_mock_services.py  start_mocks.py  test.sh  test.yaml
vehicle/util/: auth.py  cleanup.py  command_multiplexer.py  config.py  custom_logger.py  driver.py  log.py  proto.py  rpc.py  sockets.py  timer.py  utils.py
(+1869 files in other folders)
