[build-system]
requires = [
    "hatchling",
    "grpcio-tools>=1.71.2",
    "protobuf>=5.29.5",
    "protoletariat>=3.3.10",
    "Jinja2",
    "griffe"
]
build-backend = "hatchling.build"

[project]
name = "steeleagle_sdk"
version = "1.0.11"
description = "SDK for interacting with SteelEagle vehicles."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Mihir Bala", email = "mbala@andrew.cmu.edu" },
    { name = "Thomas Eiszler", email = "teiszler@andrew.cmu.edu" },
    { name = "Anthony Chen", email = "xianglic@andrew.cmu.edu" },
    { name = "Aditya Chanana", email = "achanana@andrew.cmu.edu" }
]
maintainers = [
  {name = "Thomas Eiszler", email = "teiszler@andrew.cmu.edu"}
]
keywords = [
    "autonomous",
    "robots",
    "edge",
    "vision",
    "drone",
    "uav",
    "uas",
    "ugv"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "protobuf>=3.12",
    "grpcio>=1.74.0",
    "pydantic>=2.11.7",
    "lark>=1.2.2",
    "shapely>=2.1.1",
    "matplotlib>=3.10.6",
    "folium>=0.20.0",
    "pygls",
]

[project.urls]
Homepage = "https://cmusatyalab.github.io/steeleagle/"
Documentation = "https://cmusatyalab.github.io/steeleagle/"
Repository = "https://github.com/cmusatyalab/steeleagle"
Issues = "https://github.com/cmusatyalab/steeleagle/issues"
Changelog = "https://github.com/cmusatyalab/steeleagle/releases"

[project.scripts]
compile_dsl = "steeleagle_sdk.dsl:cli_compile_dsl"

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["build/src/steeleagle_sdk"]

[tool.hatch.build.targets.sdist.hooks.custom]
path = "build/prebuild.py"
