[project]
name = "steelagle-gcs-streamlit"
version = "1.0.0"
description = "SteelEagle GCS written in Streamlit"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
"streamlit",
"folium",
"streamlit-folium",
"redis",
"zmq",
"pykml",
"colorhash",
"streamlit_keypressed",
"pyarrow",
"grpcio",
"steeleagle-sdk"
]


[tool.uv.sources]
foo = { path = "streamlit_keypressed-0.1.5-py3-none-any.whl" }
