[project]
name = "steeleagle-backend-detection"
version = "1.0.0"
description = "Object detection using YOLOv5 models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "redis",
   "opencv-python",
   "numpy",
   "pykml",
   "pygeodesy",
   "ultralytics",
   "scipy",
   "Pillow",
   "gabriel-server",
   "gabriel-protocol",
   "gabriel-client",
   "steeleagle-sdk",
   "torch"
]
