[project]
name = "steeleagle-backend-detection"
version = "1.0.0"
description = "Object detection using YOLOv5 models"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
   "redis",
   "opencv-python-headless",
   "numpy",
   "pykml",
   "pygeodesy",
   "ultralytics",
   "scipy",
   "Pillow",
   "gabriel-server>=4.1",
   "steeleagle-sdk",
   "torch"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
